examples/openshift/zgw-posix.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zgw-posix
  labels:
    app: zgw-posix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zgw-posix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zgw-posix
    spec:
      securityContext:
        runAsUser: 167
        runAsGroup: 167
        fsGroup: 167
      volumes:
        - name: zgw-posix-driver-pvc
          persistentVolumeClaim:
            claimName: zgw-posix-driver-pvc
        - name: zgw-posix-db-pvc
          persistentVolumeClaim:
            claimName: zgw-posix-db-pvc
        - name: zgw-posix-store-pvc
          persistentVolumeClaim:
            claimName: zgw-posix-store-pvc
      containers:
      - name: zgw-posix
        image: quay.io/mmgaggle/zgw-posix:latest
        ports:
        - containerPort: 7480
        volumeMounts:
          - mountPath: "/var/lib/ceph/rgw_posix_driver"
            name: zgw-posix-driver-pvc
          - mountPath: "/var/lib/ceph/rgw_posix_db"
            name: zgw-posix-db-pvc
          - mountPath: "/var/lib/ceph/radosgw"
            name: zgw-posix-store-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: s3-posix
spec:
  selector:
    app.kubernetes.io/name: zgw-posix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7480
