examples/openshift/zgw-notebook.yaml
# =============================================================================
# zgw-notebook.yaml - Final Demo Stack
# =============================================================================
apiVersion: v1
kind: Service
metadata:
  name: notebook
  labels:
    app.kubernetes.io/name: jupyter
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  selector:
    app.kubernetes.io/name: jupyter
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jupyter
spec:
  to:
    kind: Service
    name: notebook
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

---
apiVersion: v1
kind: Pod
metadata:
  name: jupyter
  labels:
    app.kubernetes.io/name: jupyter
    app.kubernetes.io/component: notebook
    app.kubernetes.io/part-of: zgw
spec:
  # Fix permissions so 'jovyan' (1000) can read 'ceph' (167) files
  securityContext:
    fsGroup: 167
    supplementalGroups: [167]
  
  containers:
    - name: jupyter
      image: jupyter/minimal-notebook:latest
      args: ["start-notebook.sh", "--NotebookApp.token=''", "--NotebookApp.password=''"]
      ports:
      - containerPort: 8888
        name: http
      volumeMounts:
        - name: notebook-data
          mountPath: /home/jovyan/work
        - name: zgw-shared-storage
          mountPath: /var/lib/ceph/rgw_posix_driver
          subPath: posix
  volumes:
    - name: notebook-data
      emptyDir: {}
    - name: demo-config-volume
      configMap:
        name: zgw-demo-notebook
    - name: zgw-shared-storage
      persistentVolumeClaim:
        claimName: zgw-posix-data
